playlist & comment finished

--- a/src/main/resources/i18n/messages/message_en.properties
+++ b/src/main/resources/i18n/messages/message_en.properties
@@ -1,3 +1,6 @@
 item.not.found=Item not found
 email.already.exists=Email already exists
 method.not.allowed= method not allowed
+change.order.number=change order number
+video.not.belong=video not belong to you
+item.already.exists=Item already exists
