--- a/src/main/resources/i18n/messages/message_ru.properties
+++ b/src/main/resources/i18n/messages/message_ru.properties
@@ -1,3 +1,6 @@
 item.not.found=element ?? ??????
 email.already.exists=??. ????? ??? ??????????
 method.not.allowed= method zapreshyon
+change.order.number=nado menyat order num
+video.not.belong=video ne prednadlejaaet tebya blya
+item.already.exists=item sushestvuyet
