--- a/src/main/resources/i18n/messages/message_uz.properties
+++ b/src/main/resources/i18n/messages/message_uz.properties
@@ -1,3 +1,6 @@
 item.not.found=element topilmadi
 email.already.exists=bu email mavjud
 method.not.allowed= method mumkinmas
+change.order.number=order num o'zgartir
+video.not.belong=video sanikamas
+item.already.exists=bu item mavjud
