video like finish

--- a/src/main/resources/i18n/messages/message_ru.properties
+++ b/src/main/resources/i18n/messages/message_ru.properties
@@ -4,3 +4,5 @@ method.not.allowed= method zapreshyon
 change.order.number=nado menyat order num
 video.not.belong=video ne prednadlejaaet tebya blya
 item.already.exists=item sushestvuyet
+like.removed="like udalyon"
+dislike.removed="dislike udalyon"
