--- a/src/main/resources/i18n/messages/message_uz.properties
+++ b/src/main/resources/i18n/messages/message_uz.properties
@@ -4,3 +4,5 @@ method.not.allowed= method mumkinmas
 change.order.number=order num o'zgartir
 video.not.belong=video sanikamas
 item.already.exists=bu item mavjud
+like.removed="like o'chirildi"
+dislike.removed="like o'chirildi"
