comment like is finished

--- a/src/main/resources/i18n/messages/message_en.properties
+++ b/src/main/resources/i18n/messages/message_en.properties
@@ -4,5 +4,5 @@ method.not.allowed= method not allowed
 change.order.number=change order number
 video.not.belong=video not belong to you
 item.already.exists=Item already exists
-like.removed="like removed"
-dislike.removed="dislike removed"
+like.removed=like removed
+dislike.removed=dislike removed
